FIX: Page scroll for header anchor links now adjust for the UCSF banner and the navbar. Previously, the header navigated to was hidden behind these

--- a/docs/assets/css/this_site.css
+++ b/docs/assets/css/this_site.css
@@ -52,6 +52,7 @@ a {
   color: #2d6da3;
 }
 
+
 /*--------------------------------------------------------------*
  * Sticky footer styles
  *--------------------------------------------------------------*/
@@ -135,7 +136,16 @@ dd {
   margin: 20px 0;
 }
 
-h1 { margin-top: 0px; }
+h1 {
+    margin-top: 0px;
+    /* 40px UCSF banner + 56px navbar + 20px for spacing */
+    scroll-margin-top: 116px;
+}
+
+h2, h3, h4, h5, h6 {
+    /* 40px UCSF banner + 56px navbar + 20px for spacing */
+    scroll-margin-top: 116px;
+}
 
 a:hover, a:focus {
   font-weight: normal;
